force-app/main/default/objects/Patient__c/fields/Dentist__c.field-meta.xml
<CustomField>
    <fullName>Dentist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dentist</label>
    <referenceTo>Dentist__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>