force-app/main/default/objects/Patient__c/fields/Medical_Information__c.field-meta.xml
<CustomField>
    <fullName>Medical_Information__c</fullName>
    <label>Medical Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>