force-app/main/default/objects/Patient__c/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>PID</label>
    <type>AutoNumber</type>
</CustomField>