force-app/main/default/objects/Patient__c/validationRules/ContactInformationNotFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactInformationNotFilled</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Contact_Information__c )</errorConditionFormula>
    <errorDisplayField>Contact_Information__c</errorDisplayField>
    <errorMessage>Contact information is required</errorMessage>
</ValidationRule>