force-app/main/default/objects/Patient__c/validationRules/DateOfBirthNotFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>DateOfBirthNotFilled</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Date_of_birth__c )</errorConditionFormula>
    <errorDisplayField>Date_of_birth__c</errorDisplayField>
    <errorMessage>Date of Birth is required</errorMessage>
</ValidationRule>