force-app/main/default/objects/Patient__c/validationRules/FirstNameNotFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameNotFilled</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>First Name is required</errorMessage>
</ValidationRule>