force-app/main/default/objects/Patient__c/validationRules/LastNameNotFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>LastNameNotFilled</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Last_Name__c )</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last Name is required</errorMessage>
</ValidationRule>