force-app/main/default/objects/Patient__c/listViews/All_Patients.listView-meta.xml
<ListView>
    <fullName>All_Patients</fullName>
    <columns>PID__c</columns>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Dentist__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Patients</label>
</ListView>